plugins {
    id 'java'
    id 'checkstyle'
    id 'war'
    id 'org.flywaydb.flyway' version '9.10.2'
}

java{
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

group = 'org.example'
version = '1.0-SNAPSHOT'
description = 'spring-gym-app'


repositories {
    mavenCentral()
}

dependencies {
    implementation group: 'org.springframework', name: 'spring-core', version: '6.1.13'
    implementation group: 'org.springframework', name: 'spring-context', version: '6.1.13'
    implementation group: 'org.springframework', name: 'spring-orm', version: '6.1.13'
    implementation group: 'org.springframework', name: 'spring-aop', version: '6.1.13'
    implementation group: 'org.springframework', name: 'spring-web', version: '6.1.13'
    implementation group: 'org.springframework', name: 'spring-webmvc', version: '6.1.13'
    implementation group: 'org.springframework', name: 'spring-tx', version: '6.1.13'
    implementation group: 'jakarta.annotation', name: 'jakarta.annotation-api', version: '3.0.0'
    implementation group: 'jakarta.servlet', name: 'jakarta.servlet-api', version: '6.0.0'
    implementation group: 'jakarta.validation', name: 'jakarta.validation-api', version: '3.1.0'
    implementation group: 'org.hibernate.validator', name: 'hibernate-validator', version: '8.0.1.Final'
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.17.2'
    implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.17.2'
    implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.16'
    implementation group: 'ch.qos.logback', name: 'logback-core', version: '1.5.7'
    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.5.7'
    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.34'
    annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.34'
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.11.0'
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.11.0'
    testImplementation group: 'org.mockito', name: 'mockito-core', version: '5.13.0'
    testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '5.13.0'
    testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.26.3'
    implementation group: 'org.hibernate.orm', name: 'hibernate-core', version: '6.6.1.Final'
    implementation group: 'org.postgresql', name: 'postgresql', version: '42.7.4'
    implementation group: 'org.aspectj', name: 'aspectjweaver', version: '1.9.22.1'
    implementation group: 'org.apache.tomcat', name: 'tomcat-servlet-api', version: '10.1.30'
    implementation group: 'org.apache.tomcat', name: 'tomcat-jdbc', version: '10.1.30'
    implementation group: 'org.flywaydb', name: 'flyway-core', version: '9.10.2'

    implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.6.0'
    implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-api', version: '2.6.0'

}
test{
    useJUnitPlatform()
}

checkstyle {
    ignoreFailures = false
    maxWarnings = 0
    configFile = rootProject.file('config/checkstyle/checkstyle.xml')
}

flyway {
    url = 'jdbc:postgresql://localhost:5432/gymdb'
    user = 'postgres'
    password = 'postgres'
    schemas = ['public']
    locations = ['filesystem:src/main/resources/db/migration']
}